docs: add Swagger API examples
